--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,42 @@
-.login_area{
+.login_box h2{
+  color:black;
+
+  font-size: 3rem;
+}
+
+.login_form{
+  width: 90%;
+  height: 60%;
+  /* background-color: beige; */
   display: flex;
-  flex-direction: row;
-  background-color: aqua;
-  height:9vh;
-  width:98vw;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+
+}
+.login_form input{
+  width: 86%;
+  height: 15%;
+  padding-left: 4%;
+  border-radius: 5px;
+  font-size: 1.6rem;
+}
+
+.login_area{
+  width: 99vw;
+  height: 99vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.login_box{
+   width: 400px;
+   height: 550px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   background-color:white;
+   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+   border-radius: 10px;
 }
